Fix the background image on mobile devices

--- a/app/assets/stylesheets/phone.css.scss
+++ b/app/assets/stylesheets/phone.css.scss
@@ -6,6 +6,9 @@
 
 @media #{$s}, #{$xs} {
   body {
+    .parallaxPanel {
+      background-attachment: scroll;
+    }
   }
 
   #menu {
